@@ -1,27 +1,27 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-AUX openjade-1.3.2-acinclude.m4 1922 RMD160 abf95a54c740f0893146fa992d24bf415a6e7103 SHA1 f67c4e6dc6e6f87b8462192d3ffc4e61740a4d85 SHA256 89e781bf9acc4c02a5cc0c737cadc6cb38254de527974b3ea023cb4738127260
-AUX openjade-1.3.2-bootstrap.patch 1469 RMD160 8a2af81747c3db9da385450cfd9f55f4414ab32f SHA1 15c67f35ab5bef3ee78e09c926cf8d2002b831fa SHA256 c0b1386f55ffd6bc8f09c3496687eed70666e38f3485b9f1fdec1b7f99c52aca
-AUX openjade-1.3.2-darwin.patch 1109 RMD160 99789ce8ab30c9a995a46437bea89697740255d9 SHA1 deab8f36c278c8026aacf6bd69488fe54e772062 SHA256 ccd1be234f2ed49d2a0f43784d001215f014ffa0f5b216a98f746196b675e4c2
-AUX openjade-1.3.2-deplibs.patch 1506 RMD160 146495883763799a655bf3884966668630041d06 SHA1 f5f54ab8d6f2f132930b6c160bcdcff32d0ab050 SHA256 93905d0b4878f580fece323c1ebb4b5d5db05f1e6f06dde39cfd9b2dd0a95433
-AUX openjade-1.3.2-gcc46.patch 2164 RMD160 392fa617ec263b1ff43ce8d6d635057f1e007deb SHA1 f49a264a21493c927b45bd6835a0a22a60775463 SHA256 fb873273dc31becdab60ff669c683bbb363ad3abb08949ad0ac54cfc28cf2214
-AUX openjade-1.3.2-interix.patch 813 RMD160 0d0372450fe7194d3b643a336b8f6bc3aea23d95 SHA1 c06f88f3738be6d6f528a4a59ca868751d3853a7 SHA256 0e31a71dc3794188581e01f2d88581970259a35bb294cf4eaf51048120254383
-AUX openjade-1.3.2-ldflags.patch 819 RMD160 38223c38e115836b9b8e74c73a9a488154e59200 SHA1 a0735e43ecd493d0218f347b6c3fcfdc9a43b32d SHA256 7fd651fb682d70a3f5062a65d0da60bebdc5b958cc936d7980339f49b360c3a0
-AUX openjade-1.3.2-lib64-fix.patch 878 RMD160 fbb94a712420754744e5fa4cb0edb54538a5eefd SHA1 05db472e5dda4ee9ffd1ba809f111e79103e6b59 SHA256 9b8437048682378902c71dca0b7ae4c72ae441fb6aad5994013dca991f760917
-AUX openjade-1.3.2-libosp-la.patch 1725 RMD160 5a84181aeeb1306ab5a63b1257e037115914f303 SHA1 5952f56ba22f9b0aa5a7ce106efb3bdba1bce9a3 SHA256 c0922350016fbd2784f9080a67b0f8d6171884d506216d7983dfdf95ef15ab11
-AUX openjade-1.3.2-msggen.pl.patch 748 RMD160 dccc52ca21fdbb174eb4e71738565056b55894df SHA1 2a2c733099fdcbcedd071cd47e09a95b5b583522 SHA256 19a15169e0463b66d215c9097084b8441ff86b2b7ddebcfa6dddc3da1271e5a6
-AUX openjade-1.3.2-respect-ldflags.patch 500 RMD160 9e273b9679bbb6b612196d92668eed9794a760e7 SHA1 3ff33a02e006b17bbc7345390400ef2d7665bb55 SHA256 498b8c9eb8eb4adea6bbe63c3e85f7a1aa619734caecd7ed4c0d70487850778b
-AUX openjade-1.3.2.dsssl-catalog 269 RMD160 fc328d135bf956fe7ae60f705979accd08bf74a8 SHA1 934043c60ca37fc9ce0fdee13c6706df89fb5acc SHA256 f33d7ce1b564b91bbdf5b8983f21ce4c6a0e420f0e8676a8439f460a49b16abc
-DIST openjade-1.3.2.tar.gz 894834 RMD160 3b12f6596a42c49a60cc07cd9b8f4c5fdf3bafd2 SHA1 54e1999f41450fbd62c5d466002d79d3efca2321 SHA256 1d2d7996cc94f9b87d0c51cf0e028070ac177c4123ecbfd7ac1cb8d0b7d322d1
-EBUILD openjade-1.3.2-r3.ebuild 3690 RMD160 a698b52f8ea5a6f0be23b58796b5678a51af2a3a SHA1 140ae70efc7ddcc3e362408fa95f82cdc5ba83c4 SHA256 6a0e77fb4577254f2770ee1ff0c71394b6f429a3195a622e6f51aff27347630e
-EBUILD openjade-1.3.2-r4.ebuild 3549 RMD160 332abe4964f6e1147a13e973bbf29d076fb759aa SHA1 295ac730626532ed3e1c919bb40e3d8333817dfb SHA256 5e58f84e58cb3d2ee956416739a27de4e854fae75fec78ac70b7a79d8420087d
-MISC ChangeLog 10387 RMD160 7884454a61523d99ff9a1fd3cc631c15d39e36a2 SHA1 1f7016d71e156a2b66ebdb9d92929b4adacf4b26 SHA256 a4231d6cd32855ce9790221f63a77e4865ec09b7c29ae561ab887a06daf38d8b
-MISC metadata.xml 159 RMD160 a94e7b2c191d1593b8bc416d266571e001c2f673 SHA1 3c1d0831d8acacef390234d20d7711cabded861a SHA256 52cf1b9dda72e2d61fef95515c8a124ac9f1196e5509e5636e269f396fcba8a3
+AUX openjade-1.3.2-acinclude.m4 1922 SHA256 89e781bf9acc4c02a5cc0c737cadc6cb38254de527974b3ea023cb4738127260 SHA512 76915d34e746f85eb15d2c79cc7a030070e5d266e3b2520d2321195f19c13aebc9a28fc4298006ab90a73148baebda568b3dc29517505224b78a8c244c2c0fdb WHIRLPOOL d10c70f455c645d2477c90d0a2afb4051196f34936ef44ae26224f9938e12849d6ad738bdef4c1059b5e3b33ce09bcbf1cc4f3ada58918587a681cc99c9be5c9
+AUX openjade-1.3.2-bootstrap.patch 1469 SHA256 c0b1386f55ffd6bc8f09c3496687eed70666e38f3485b9f1fdec1b7f99c52aca SHA512 b90bf75fde3b4fd022d33702b57149494985eac1ce0624924b557e8f3f7952259ea6aa9c60f6464dca52951fb8697b7ac5023d2f42f8a293e85204127cbc3fa8 WHIRLPOOL 113f7cf22dcbef92d385ec7a5efc5a568feae6d4c0fca198931e83acf26bf1fb0190a22ff950662a836482852b780de4e9c07c4f4f8aaefb5801a599496dc339
+AUX openjade-1.3.2-darwin.patch 1109 SHA256 ccd1be234f2ed49d2a0f43784d001215f014ffa0f5b216a98f746196b675e4c2 SHA512 ba6a5a78ee9bbc1c9a598bdfcc1bd1ab78a0220c1ad130b2aeff8911854cfe211026a1b30377e3d3fa56b5a3cd6519b58c1b1f2158bae82b63dc38031e126c68 WHIRLPOOL 933482a69551df4f8fadbb6f2f43cf680ef10b12a4bf6e58f3123e9c27f15e57add01d4a577b6d3af4b333315a147864256b3b0cdf752dee0c742841234bd95f
+AUX openjade-1.3.2-deplibs.patch 1506 SHA256 93905d0b4878f580fece323c1ebb4b5d5db05f1e6f06dde39cfd9b2dd0a95433 SHA512 4a7df423c8b8ad15a1a39900c1bb6882157534c981a9c0679b2c6d71a435b6bf3adf27052799a9eb1dd4f6ecd7e19be72889d9a55c7511ffde9dd11f4c558d9e WHIRLPOOL 40d7d622c11ceda74bacd05e188bf321f25b61fb03c5aa8c84383606fbdbbc80eecc7c559a4f1f710285e0867c950cc656c4f8b8907cf2eede0adeb8f33b22c6
+AUX openjade-1.3.2-gcc46.patch 2164 SHA256 fb873273dc31becdab60ff669c683bbb363ad3abb08949ad0ac54cfc28cf2214 SHA512 df222938e4a04d27618540592e61b8d71fe42caaa4d8aeb90bfcd338efb1ff7903ea860dc460b65a69adf1ccf300a7d67459ff4950a35d9a35569fb8b3ed1438 WHIRLPOOL 2bc00a4f01e8c5af941ceaf87171231064b96131bf1575c6d6f506a6c83c40c20e789691d8602cc98ef00cc8d1e899d2594e8a937315b08ee0b3af4611277e51
+AUX openjade-1.3.2-interix.patch 813 SHA256 0e31a71dc3794188581e01f2d88581970259a35bb294cf4eaf51048120254383 SHA512 6839741510264013f0cefe81282dab861777a6d912630d1c70b1954501d1af67d6b6b9c39f7845c8f85548c8a1bc0189b1b0950c908fb8bb578b2f67dc7426b5 WHIRLPOOL 207f7680ee322ed0808caa3ee1aeea38c5bf2a691bf6d786e0740aa35aab58c8c2a76d83a323744671b8faa91b8bf913924c36c85558b9015c5a787ce559b5f6
+AUX openjade-1.3.2-ldflags.patch 819 SHA256 7fd651fb682d70a3f5062a65d0da60bebdc5b958cc936d7980339f49b360c3a0 SHA512 6112fbc474f0f2c3c024040b42b13290ba2763381b7f99071d7d9d4f8d11bf1087a2c319eba9f0006e2cc067a14a52cedde98444338b180f9566172b52c044ec WHIRLPOOL 2d0d5a6bce8d438dcd2f4406fafbc87ef1b1ec54b6ba0411eb5df11e17e2f2406dbc086b476135aca4512f75595425b45306f656087bac5d66b9110327ba65ee
+AUX openjade-1.3.2-lib64-fix.patch 878 SHA256 9b8437048682378902c71dca0b7ae4c72ae441fb6aad5994013dca991f760917 SHA512 a777ea227b43e71e4b8d634cea2e3550703c1e7cc7c127bd107fcc7e0c05b8c3f61d39906b82d243fbc20e2b0b802805e9457dd13e0ad647b4e6248718ae08bf WHIRLPOOL 7f7845faa0079d351c2dce037375562fe02e1c417d705e85758d677b7e8ccb76e98565224597a9ba353ee3ad3eee44f633a65beb83abaaf3144215eacce4fb33
+AUX openjade-1.3.2-libosp-la.patch 1725 SHA256 c0922350016fbd2784f9080a67b0f8d6171884d506216d7983dfdf95ef15ab11 SHA512 9b73b95ce3ac1d0042641eb0ddbb5ce753d2fd639dab026b9eab0f45bb3231515c69670f02c2a0793d950b6a6276f94e838d273f01e43694e97525af65903a0e WHIRLPOOL c423be9b8f54dd1150442cf47630652808a829f8c163a6a0ec711b4fbf6e66180b01276c50748a93bafce407b4a2e1781ea4abb50e822ae956f24ed92bd55e7e
+AUX openjade-1.3.2-msggen.pl.patch 748 SHA256 19a15169e0463b66d215c9097084b8441ff86b2b7ddebcfa6dddc3da1271e5a6 SHA512 31f25e96bb3df3d8c0850a6ca2c2f0e59c19d23aa62a697ea475c9d2a5a36f5e1fcf807878ca7be5b57538b96d3295591466f1035edd9a885e035525f445b410 WHIRLPOOL 476ec0445702a41bd48dac9788266158e0d4d4b2f1bd0e7ad590150272423e4b659f04654490bb1110a0a8dfc14cb37d47caae6f1632a866497fadf0723ea9f4
+AUX openjade-1.3.2-respect-ldflags.patch 500 SHA256 498b8c9eb8eb4adea6bbe63c3e85f7a1aa619734caecd7ed4c0d70487850778b SHA512 bca7e9550329bc033a1df4ca78bc1ae75b12f27fdecc6aafff136fd81c93f88045ca675dd03e711b4d428a3de832f3bfa703d639319a2b348a2f8268091658d8 WHIRLPOOL 0f2bc31aee27c00c3d8179b518c516ba7b2a42945883894f4463a8c4d912b52bfe11ceaade13e84fa19e5e22b8a5364d54af21d5c624413c79d47ed24fa54759
+AUX openjade-1.3.2.dsssl-catalog 269 SHA256 f33d7ce1b564b91bbdf5b8983f21ce4c6a0e420f0e8676a8439f460a49b16abc SHA512 fba4332fb995c05ae9f9a83cea5422c11ae37ec99b4e37f40edf11acd5be011cff9c7d3b0fcfd0bf2f9569bbe991374678811301ca07a7ef033556309012e340 WHIRLPOOL 64a4089857fe045cf24b2d41f36ed5cfe336b5779f2ed8a927fd11091ef70eaace398b29be12d1a4923464fd47e98128d87029fe59daece3afb556c79528b297
+DIST openjade-1.3.2.tar.gz 894834 SHA256 1d2d7996cc94f9b87d0c51cf0e028070ac177c4123ecbfd7ac1cb8d0b7d322d1 SHA512 c39f70ec8020bd7a2b3e125cbd146b49ddb57910a042bd212da02722617ed5681f32dab60acc26ab89ac658997c6f604911d7be3be391d6278267481f3bcf2f1 WHIRLPOOL 3affbfe811a5650a6adcc70e698eb75bafcbc1f1b205a384bd3bf5cd8885cb049a28d818bf3d807e7f9b00f7f998a39c09f68e55e3283abcc42d90d042ddab20
+EBUILD openjade-1.3.2-r3.ebuild 3727 SHA256 303f935547b4e54909d41628e7a504be34dbbf9dc3f3b93f8cc5666d186969ce SHA512 50501a9815b2de81629396bdcc7ade94bef6fe5607d81f637aa89d8051f8f964e5bcc2666c604fa7e0b7f0fced1e4f542135282e62bff0737a588055f068c81b WHIRLPOOL c2095510bcd2db1a12d4aea99f10b92fba7d992456cd90870ef240838675cf457ef2d5d61deee7687cd61a94f0441e4af25a1b33d8fb2e4c21757bd5e8a13b75
+EBUILD openjade-1.3.2-r4.ebuild 3637 SHA256 aac000c1353af04ec3cdd0662717721231a317df789352558e527ca1ca53c0bd SHA512 93e41ad68436452fc70a9639de0439b9921ab560e7007692bee292c76a97e80398b052070344e1421b4bda216f11fb55a8f7347e81fe1ca28e56c3f7ac1f90ea WHIRLPOOL 087e25319f5831cb2e5d1f92d612bbcfdf7794e55f9494e33d7348b5e00a3db9c092ba806de117906da18d6904169432d2497d46ca00f54d88b7132cf8f91565
+MISC ChangeLog 10694 SHA256 b1c8938c545e0a2ef33295db092db6fcf40261f8d93c65d20b9e9298799993df SHA512 f67a200d7bbeaf71dfa5463a23882d6f4264d26d936ea9cb146bf40692d3c9bba0f89ce411c5468b6eaa5bad2e56e378d8753e091a6ac7279bb445ceca861fa1 WHIRLPOOL 51a161be432a14f35df17a5b9fdc137607f90983975ec657e3c60a9bd92033aed888a5ed3a92b16a2b0f0c560b32e77515349debf4fff304fb931f002c87ffd0
+MISC metadata.xml 159 SHA256 52cf1b9dda72e2d61fef95515c8a124ac9f1196e5509e5636e269f396fcba8a3 SHA512 119d9e98ba4d956ad7811e557e8013b976337b14029b994bfa4eb08ba24cfe6ae7757a814a02c0526246b3c77ce1eb55b81681731863a10b72436dbe47e693d2 WHIRLPOOL a6d40a902f676b47e088ee88d7149fa3c2d6e8ac1117a265e083196abdb95483f506974afbdcfdcb3e6a14a85d4726ba2876d7cfb90efa8586a3d1581f30274b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAk/tb+YACgkQX3X2B8XHTomCbACfWvTpVzE145yoOFRExnJuaybz
-75kAnjGcNQnI7TVZHGH4aZU0pP1M52el
-=gHkV
+iEYEAREIAAYFAlCK0Z0ACgkQX3X2B8XHTonSOQCgmF+XppNeneWvjTf14zqCvo1Y
+SEUAnjBymlG/1DB4FrZEMUqQeu54XVro
+=GaXy
 -----END PGP SIGNATURE-----
