@@ -1,6 +1,6 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/openjade/openjade-1.3.2-r3.ebuild,v 1.9 2011/05/14 14:51:25 angelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/openjade/openjade-1.3.2-r3.ebuild,v 1.10 2012/07/19 23:42:37 floppym Exp $
 
 EAPI=2
 
@@ -69,13 +69,14 @@ src_configure() {
 }
 
 src_compile() {
-	emake -j1 || die "make failed"
+	emake -j1 SHELL="${BASH}" || die "make failed"
 }
 
 src_install() {
 	insinto /usr/$(get_libdir)
 
 	make DESTDIR="${D}" \
+		SHELL="${BASH}" \
 		libdir="${EPREFIX}"/usr/$(get_libdir) \
 		install install-man || die "make install failed"
 
