@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/openjade/openjade-1.3.2-r4.ebuild,v 1.3 2012/04/26 22:37:01 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/openjade/openjade-1.3.2-r4.ebuild,v 1.5 2012/07/19 23:42:37 floppym Exp $
 
 EAPI=2
 
@@ -62,6 +62,7 @@ src_configure() {
 		--enable-http \
 		--enable-default-catalog="${EPREFIX}"/etc/sgml/catalog \
 		--enable-default-search-path="${EPREFIX}"/usr/share/sgml \
+		--enable-splibdir="${EPREFIX}"/usr/$(get_libdir) \
 		--libdir="${EPREFIX}"/usr/$(get_libdir) \
 		--datadir="${EPREFIX}"/usr/share/sgml/${P} \
 		$(use_enable static-libs static)
@@ -71,13 +72,14 @@ src_compile() {
 	# Bug 412725.
 	unset INCLUDE
 
-	emake -j1 || die "make failed"
+	emake -j1 SHELL="${BASH}" || die "make failed"
 }
 
 src_install() {
 	insinto /usr/$(get_libdir)
 
 	make DESTDIR="${D}" \
+		SHELL="${BASH}" \
 		libdir="${EPREFIX}"/usr/$(get_libdir) \
 		install install-man || die "make install failed"
 
