@@ -1,6 +1,14 @@
 # ChangeLog for app-text/openjade
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/openjade/ChangeLog,v 1.68 2012/06/07 14:50:19 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/openjade/ChangeLog,v 1.70 2012/07/19 23:42:37 floppym Exp $
+
+  19 Jul 2012; Mike Gilbert <floppym@gentoo.org> openjade-1.3.2-r3.ebuild,
+  openjade-1.3.2-r4.ebuild:
+  Pass SHELL=/bin/bash on the emake command line to avoid bug 427090.
+
+  16 Jul 2012; Anthony G. Basile <blueness@gentoo.org>
+  openjade-1.3.2-r4.ebuild:
+  Set splibdir for multilib systems, bug #426724
 
   29 Jun 2012; Fabian Groffen <grobian@gentoo.org> openjade-1.3.2-r4.ebuild:
   Refine CONFIG_SHELL assignment, we only need a Prefix env, so e.g. Prefix dash
